# main-loop-async

./: Cargo.toml  README.md  bacon.toml
.github/workflows/: general.yml  wasm.yml
examples/: egui_simple.rs  loop_yield_custom.rs  loop_yield_data_state.rs  loop_yield_data_state_thread.rs  no_loop.rs  no_loop_thread.rs  single_task.rs
scripts/: deploy.nu
src/: data_state.rs  data_state_retry.rs  lib.rs  platform.rs  yield_.rs
src/platform/: native.rs  wasm.rs
src/traits/: native.rs  wasm.rs
tests/: web.rs
